RH-2008-03-05-0: Enhancem:  Hedeby: new test for reloading executor config
                 Issue:     hedeby #234 (Part 1)
                 Review:    CR

RD-2008-03-04-0: Bugfix:    jobs in scheduler/advance_reservation requested wrong pe
                 Review:    AH

CR-2008-03-04-0: Bugfix:    o hedeby installation should also check GE resources
                 Issue:     hedeby #366
                 Bugfix:    o run startup hooks for already started hedeby system
                              results in testsuite tcl crash
                 Cleanup:   o basic resource movement test did not move resources
                              parallel
                 Review:    RH

LP-2008-02-29-0: Enhacem:   install - old RC script is removed by default
                 Enhacem:   Only conflicting SMF service is detected as error
                 Review:    PJ

CR-2008-02-27-2: Bugfix:    resolve_host returned hostname "unkown" when
                            gethostbyname binary was not available
                 Review:    JG

CR-2008-02-27-1: Bugfix:    fixed cache init for execd_nodes
                 Review:    RD

CR-2008-02-27-0: Bugfix:    using exed_nodes instead of exed_hosts for
                            hedeby and additional cluster procedures
                 Review:    RD

RD-2008-02-27-0: Enhancem:  added test for ENABLE_RESCHEDULE_KILL
                            and ENABLE_RESCHEDULE_SLAVE
                 Review:    JG

CR-2008-02-26-1: Cleanup:   removed ts_log_fine cat output of 
                            wait_for_remote_file
                 Review:    EB

CR-2008-02-26-0: Enhancem:  o added new procedure to file_procedures.tcl:
                              analyze_directory_structure()
                            o added new script: analyze_dir.sh
                            o enabled submit host setting for GE adapters
                              in hedeby installation
                            o speed up and clean up of hedeby 